--- a/src/Pages/Home/Home/Home.css
+++ b/src/Pages/Home/Home/Home.css
@@ -6,8 +6,10 @@
   height: 100vh;
 }
 
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+@media screen and (max-width: 990px) {
+  .banner {
+    background-image: url("../../../images/tutor.jpg");
+    background-position: left;
+    background-size: contain;
+  }
 }
